# freebird

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
eval/: ground_truth.json
eval/prompts/: default.txt  default_v2.txt
src/freebird/: backfill.py  config.py  eval_label.py  eval_run.py  main.py  pipeline.py  vision_backfill.py
src/freebird/analysis/: birdnet.py  vision.py
src/freebird/bot/: claude.py  telegram.py
src/freebird/media/: downloader.py
src/freebird/storage/: database.py
src/freebird/vicohome/: api.py  auth.py  models.py
