[project]
name = "freebird"
version = "0.1.0"
description = "Bird feeder monitoring via VicoHome API with BirdNET species identification"
readme = "README.md"
authors = [
    { name = "waleed", email = "waleed.ayoub@gmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.0",
    "birdnet>=0.2",
    "python-dotenv>=1.0",
    "python-telegram-bot>=20.0",
    "anthropic>=0.40",
]

[project.scripts]
freebird = "freebird.main:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
