[project]
name = "freebird"
version = "0.1.0"
description = "Bird feeder monitoring via VicoHome API with AI vision species identification"
readme = "README.md"
authors = [
    { name = "waleed" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "python-telegram-bot>=20.0",
    "anthropic>=0.40",
    "pydantic-ai-slim[anthropic,google,openai]",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic-evals>=1.58.0",
    "python-multipart>=0.0.22",
]

[project.scripts]
freebird = "freebird.main:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
